# goblins

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUGLOG.md  CHANGELOG.md  README.md  TODO.md  goblin_test.py  pyproject.toml
docs/: blog-draft.md  experiment.md  infographic.html
goblin/: evasion.py  prompts.py  runner.py  words.py
tests/: test_evasion.py  test_output.py  test_prompts.py  test_runner.py  test_words.py
