[project]
name = "goblins"
version = "0.1.0"
description = "Goblin detection test suite for AI models"
authors = [
    {name = "monkee"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=2.35.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "rich (>=15.0.0,<16.0.0)"
]


[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
